Fix too long recipe description

--- a/src/components/RecipeCards/RecipeCard/RecipeCard.module.scss
+++ b/src/components/RecipeCards/RecipeCard/RecipeCard.module.scss
@@ -4,6 +4,13 @@
   color: #707070;
 }
 
+.content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .name {
   font-family: "Segoe UI", sans-serif;
   font-size: 16px;
@@ -19,13 +26,21 @@
 .image {
   width: 100%;
   height: 150px;
-  object-fit: cover;
-  transition: transform 1s ease;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 1s ease;
+  }
 }
 
 .outerWrapper {
   border: 2px solid var(--gray);
+  height: 420px;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 
   &:hover {
     .image {
